--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,225 +1,242 @@
 /* index */
 
 .imgfeature img {
-    width: 270px;
-    height: 270px;
-    object-fit: cover;
+  width: 270px;
+  height: 270px;
+  object-fit: cover;
 }
 
 .benefits {
-    justify-content: center;
+  justify-content: center;
 }
 
 .iconStar img {
-    margin: 2%;
-    height: 56px;
-    width: 56px;
+  margin: 2%;
+  height: 56px;
+  width: 56px;
 }
 
 
 .sectionInfo {
-    background-color: $third-color;
-    text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+  background-color: $third-color;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
 
-    a{
-        text-decoration: none;
-        color: #000000;
-        &:hover{
-            color: #1B0A5C;
-        }
-    }
-    h2 {
-        padding: 1%;
-    }
+  a{
+      text-decoration: none;
+      color: #000000;
+      &:hover{
+          color: #1B0A5C;
+      }
+  }
+  h2 {
+      padding: 1%;
+  }
 
-    div {
-        text-align: center;
-    }
-    p{
-        text-align: justify;
-        justify-content: center;
-        align-items: center; 
-    }
+  div {
+      text-align: center;
+  }
+  p{
+      text-align: justify;
+      justify-content: center;
+      align-items: center; 
+  }
 }
 
 .map {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .boxInfo {
-    text-align: center;
-    background-color: $second-color;
-    border: 1px #000000 solid;
-    height: 600px;
-    width: 300px;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    transition: transform 5s ease;
+  text-align: center;
+  background-color: $second-color;
+  border: 1px #000000 solid;
+  height: 600px;
+  width: 300px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  transition: transform 5s ease;
 
-    h3 {
-        font-family: $main-font;
-        font-size: 24px;
-    }
+  h3 {
+      font-family: $main-font;
+      font-size: 24px;
+  }
 
-    p {
-        margin-top: 10px;
-        font-family: $main-font;
-        font-size: 18px;
-        text-align: justify;
-    }
+  p {
+      margin-top: 10px;
+      font-family: $main-font;
+      font-size: 18px;
+      text-align: justify;
+  }
 
-    &:hover {
-        transform: scale(1.1);
-    }
+  &:hover {
+      transform: scale(1.1);
+  }
 }
 .boxProduct {
-    @extend .boxInfo;
-  
-    .productName {
-      h3 {
-        font-family: Arial, sans-serif;
-        font-size: 20px;
-        color: #333;
-        margin-bottom: 10px;
-      }
-    }
-  
-    .productPrice {
-      h4 {
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        color: #888;
-        margin-bottom: 10px;
-      }
-    }
-  
-    .productDescription {
-      p {
-        font-family: Arial, sans-serif;
-        font-size: 14px;
-        color: #555;
-        line-height: 1.5;
-        margin-bottom: 10px;
-      }
-    }
-  
-    .productButton {
-      button {
-        background-color: #f44336;
-        color: #fff;
-        border: none;
-        padding: 10px 20px;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        cursor: pointer;
-  
-        &:hover {
-          background-color: #d32f2f;
-        }
-      }
+  @extend .boxInfo;
+
+  .productName {
+    h3 {
+      font-family: Arial, sans-serif;
+      font-size: 20px;
+      color: #333;
+      margin-bottom: 10px;
     }
   }
 
+  .productPrice {
+    h4 {
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      color: #888;
+      margin-bottom: 10px;
+    }
+  }
+
+  .productDescription {
+    p {
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      color: #555;
+      line-height: 1.5;
+      margin-bottom: 10px;
+    }
+  }
+
+  .productButton {
+    button {
+      background-color: #f44336;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #d32f2f;
+      }
+    }
+  }
+}
+
 
 .logo {
-    width: 160px;
-    height: 100px;
+  width: 160px;
+  height: 100px;
 }
 
 .boxindex {
-    background-color: $third-color;
+  background-color: $third-color;
 
-    img{
-        height: 700px;
-        width: 100%;
-        object-fit: cover;
-    }
+  img{
+      height: 700px;
+      width: 100%;
+      object-fit: cover;
+  }
 }
 
 .buttonWhatsapp {
-    margin-top: 2rem;
-    height: 65px;
-    width: 303px;
-    background-color: #ffffff;
-    border: 4px #000000 solid;
-    transition: transform 5s ease;
+  margin-top: 2rem;
+  height: 65px;
+  width: 303px;
+  background-color: #ffffff;
+  border: 4px #000000 solid;
+  transition: transform 5s ease;
 
 
-    img {
-        height: 50px;
-        width: 50px;
-    }
+  img {
+      height: 50px;
+      width: 50px;
+  }
 
-    label {
-        font-family: $main-font;
-        font-size: 24px;
-        margin-top: 7px;
+  label {
+      font-family: $main-font;
+      font-size: 24px;
+      margin-top: 7px;
 
-    }
-    &:hover {
-        transform: scale(1.1);
-        background-color: #1B0A5C;
-        color: #ffffff;
-    }
+  }
+  &:hover {
+      transform: scale(1.1);
+      background-color: #1B0A5C;
+      color: #ffffff;
+  }
 }
 /* index */
 
 .calculadora {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: $third-color;
-    padding: 1rem;
-  
-    h3 {
-      font-family: $main-font;
-      font-size: 24px;
-      margin-bottom: 1rem;
-    }
-  
-    label {
-      font-family: $main-font;
-      font-size: 18px;
-      margin-bottom: 0.5rem;
-    }
-  
-    select,
-    input[type="number"] {
-      width: 100%;
-      padding: 0.5rem;
-      margin-bottom: 1rem;
-      font-family: $main-font;
-      font-size: 16px;
-      border: 1px solid #000000;
-      border-radius: 4px;
-    }
-  
-    button {
-      background-color: #f44336;
-      color: #ffffff;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-family: $main-font;
-      font-size: 16px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-  
-      &:hover {
-        background-color: #d32f2f;
-        transform: scale(1.05);
-      }
-    }
-  
-    #resultado {
-      font-family: $main-font;
-      font-size: 18px;
-      margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: $third-color;
+  padding: 1rem;
+
+  h3 {
+    font-family: $main-font;
+    font-size: 24px;
+    margin-bottom: 1rem;
+  }
+
+  label {
+    font-family: $main-font;
+    font-size: 18px;
+    margin-bottom: 0.5rem;
+  }
+
+  select,
+  input[type="number"] {
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    font-family: $main-font;
+    font-size: 16px;
+    border: 1px solid #000000;
+    border-radius: 4px;
+  }
+
+  button {
+    background-color: #f44336;
+    color: #ffffff;
+    border: none;
+    padding: 0.5rem 1rem;
+    font-family: $main-font;
+    font-size: 16px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      background-color: #d32f2f;
+      transform: scale(1.05);
     }
   }
-  
+
+  #resultado {
+    font-family: $main-font;
+    font-size: 18px;
+    margin-top: 1reM;
+  }
+}
+// Agregar estilos para los botones
+#btnConsultarPerro,
+#btnConsultarGato {
+background-color: $second-color; // Cambiar esto por el color deseado
+color: #ffffff;
+border: none;
+padding: 10px 20px;
+font-family: $main-font;
+font-size: 16px;
+cursor: pointer;
+margin: 10px;
+transition: transform 0.3s ease;
+
+&:hover {
+  background-color: darken($first-color, 10%); // Cambiar esto para ajustar el efecto hover
+  transform: scale(1.1);
+}
+}
